<resources>
    <string name="app_name">SleepMonitoring</string>
    <string name="heart_rate">HR : </string>
    <string name="accelerometer">Acc : </string>
    <string name="gyroscope">Gyro: </string>
    <string name="eeg">EEG</string>
    <string name="record">Rec</string>
    <string name="stop">Stop</string>

    <string name="ble_not_supported">BLE is not supported in this device!</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="position">Pos:</string>
    <string name="tcpip">send packet</string>
</resources>